--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "classmap": ["basecoat/classes/"]
+        "classmap": ["basecoat/"]
     }
 }
