--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "classmap": ["basecoat/"]
+        "psr-4": {
+            "Basecoat\\" : ["basecoat/", "basecoat/classes/"]
+        }
     }
 }
